# tbtc-v2

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  CODEOWNERS  CONTRIBUTING.adoc  README.adoc  SECURITY.adoc  package.json
.devcontainer/: export-0x123694886dbf5ac94dda07135349534536d14caf.csv
.github/workflows/: contracts-docs.yml  contracts.yml  cross-chain-arbitrum.yml  cross-chain-arbitrum_DO_NOT_PUSH_TESTING copy.yml  cross-chain-optimism.yml  cross-chain-polygon.yml  cross-chain-solana.yml  docs.yml  format.yml  monitoring.yml  npm-contracts.yml  npm-cross-chain-arbitrum.yml  npm-typescript.yml  npm.yml  rerun.yml  reusable-solidity-docs.yml  solidity-docs.yml  system-tests.yml  tbtc-ts.yml  typescript.yml  yearn.yml
cross-chain/arbitrum/: .eslintrc  .gitignore  .prettierignore  README.adoc  hardhat.config.ts  package.json  tsconfig.json
cross-chain/base/: .gitignore  README.adoc  hardhat.config.ts  package.json
cross-chain/optimism/: .gitignore  README.adoc  hardhat.config.ts  package.json
cross-chain/polygon/: .eslintrc  .gitignore  README.adoc  hardhat.config.ts  package.json  tsconfig.json
cross-chain/solana/: .gitignore  (+13 more)
cross-chain/solana/programs/tbtc/: Cargo.toml
cross-chain/solana/programs/tbtc/src/: constants.rs  error.rs  event.rs  lib.rs
cross-chain/solana/programs/tbtc/src/processor/: mint.rs  mod.rs
cross-chain/solana/programs/tbtc/src/processor/admin/: add_guardian.rs  add_minter.rs  cancel_authority_change.rs  change_authority.rs  initialize.rs  mod.rs  pause.rs  remove_guardian.rs  remove_minter.rs  take_authority.rs  unpause.rs
cross-chain/solana/programs/tbtc/src/processor/mint/: mint.rs  mod.rs
cross-chain/solana/programs/tbtc/src/state/: config.rs  guardian_index.rs  guardian_info.rs  guardians.rs  minter_index.rs  minter_info.rs  minters.rs  mod.rs  tbtc.rs
cross-chain/solana/programs/wormhole-gateway/: Cargo.toml
cross-chain/solana/programs/wormhole-gateway/src/: constants.rs  error.rs  event.rs  lib.rs
cross-chain/solana/programs/wormhole-gateway/src/processor/: deposit_wormhole_tbtc.rs  initialize.rs  mod.rs  receive_tbtc.rs  send_tbtc.rs  send_tbtc_to_gateway.rs  update_gateway_address.rs  update_minting_limit.rs
cross-chain/solana/programs/wormhole-gateway/src/processor/admin/: cancel_authority_change.rs  change_authority.rs  initialize.rs  mod.rs  take_authority.rs  update_gateway_address.rs  update_minting_limit.rs
cross-chain/solana/programs/wormhole-gateway/src/processor/send_tbtc/: gateway.rs  mod.rs  wrapped.rs
cross-chain/solana/programs/wormhole-gateway/src/state/: custodian.rs  gateway_info.rs  mod.rs  wormhole_gateway.rs
cross-chain/solana/solana-tbtc-anchor/programs/solana-tbtc-anchor/: Cargo.toml
cross-chain/solana/solana-tbtc-anchor/programs/solana-tbtc-anchor/src/: lib.rs
docs/: README.adoc  index.adoc
monitoring/: .dockerignore  .eslintrc.js  .prettierignore  Dockerfile  README.adoc  package.json  tsconfig.json
simulation/: wallets.js
simulations/: README.md  mixed-strategy-solver.py
solidity/: .eslintrc  .gitignore  .prettierignore  .prettierrc.js  .solhint.json  README.adoc  config_tenderly.sh  export.json  hardhat.config.js  hardhat.config.ts  package.json  slither.config.json  tenderly.yaml  tsconfig.json
system-tests/: .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .mocharc.json  README.adoc  hardhat.config.ts  package.json  tsconfig.json
tbtc-ts/: .eslintrc.js  .mocharc.json  LICENSE  README.adoc  package.json  tsconfig.json
typescript/: .eslintignore  .gitignore  .prettierignore  README.adoc  README.md  keep-network-tbtc-v2.ts-v2.5.1-dev.tgz  package.json  tsconfig.json  tsconfig.test.json  typedoc.json  typings.d.ts
yearn/: .eslintrc  .gitignore  .solhint.json  README.adoc  hardhat.config.js  hardhat.config.ts  package.json  tsconfig.json
(+1014 files in other folders)
