[package]
name = "wormhole-gateway"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wormhole_gateway"

[features]
default = ["mainnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
solana-devnet = ["wormhole-anchor-sdk/solana-devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"]}
anchor-spl = "0.28.0"

wormhole-anchor-sdk = { git = "https://github.com/wormhole-foundation/wormhole-scaffolding", rev = "81e6801bd9224958614504ff18914c220e9fdaf2", features = ["token-bridge"], default-features = false }

tbtc = { path = "../tbtc", features = ["cpi"] }