[package]
name = "wormhole-gateway"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wormhole_gateway"

[features]
default = ["mainnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
solana-devnet = ["wormhole-anchor-sdk/solana-devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
wormhole-anchor-sdk = { version = "0.1.0-alpha.1", features = ["token-bridge"], default-features = false }

anchor-lang = { version = "0.28.0", features = ["init-if-needed"]}
anchor-spl = "0.28.0"

solana-program = "=1.14"

tbtc = { path = "../tbtc", features = ["cpi"] }